--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
         required: true
         type: string
         default: terraform-module
-name: release-please
+name: release
 jobs:
   release-please:
     runs-on: ubuntu-latest
