--- a/.github/workflows/semantic-check.yml
+++ b/.github/workflows/semantic-check.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - run: npm install -g @commitlint/cli @commitlint/config-conventional
-      - run: "echo 'module.exports = {extends: [\"@commitlint/config-conventional\"]}' > commitlint.config.js"
-      - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+      - name: commitlint (install)
+        run: |
+          npm install -g @commitlint/cli @commitlint/config-conventional
+          echo 'module.exports = {extends: [\"@commitlint/config-conventional\"]}' > commitlint.config.js
+      - name: commitlint (run)
+        run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
