--- a/.github/workflows/terraform-quality.yml
+++ b/.github/workflows/terraform-quality.yml
@@ -5,7 +5,7 @@ on:
         required: false
         type: string
         default: .
-name: terraform-pr
+name: terraform-quality
 jobs:
   terraform-lint:
     runs-on: ubuntu-latest
