ci: fix local jobs by removing version pinning

--- a/.github/workflows/local-pull-request.yml
+++ b/.github/workflows/local-pull-request.yml
@@ -5,4 +5,4 @@ on:
 name: pull-request
 jobs:
   semantic-check:
-    uses: ./.github/workflows/semantic-check.yml@main
+    uses: ./.github/workflows/semantic-check.yml
