--- a/.github/workflows/local-push.yml
+++ b/.github/workflows/local-push.yml
@@ -5,6 +5,6 @@ on:
 name: push-to-main
 jobs:
   release:
-    uses: ./.github/workflows/release.yml@main
+    uses: ./.github/workflows/release.yml
     with:
       release-type: simple
