docs: simplify usage section, add branch comment in examples, add version pinning

--- a/global/release.yml
+++ b/global/release.yml
@@ -1,8 +1,9 @@
 on:
   push:
     branches:
-      - main
+      - main # your trunk branch
+
 name: release
 jobs:
   release:
-    uses: padok-team/github-workflows/.github/workflows/release.yml@main
+    uses: padok-team/github-workflows/.github/workflows/release.yml@v1
