--- a/terraform/terraform-quality.yml
+++ b/terraform/terraform-quality.yml
@@ -1,8 +1,9 @@
 on:
   pull_request:
     branches:
-      - main
+      - main # your trunk branch
+
 name: terraform-quality
 jobs:
   terraform-quality:
-    uses: padok-team/github-workflows/.github/workflows/terraform-quality.yml@main
+    uses: padok-team/github-workflows/.github/workflows/terraform-quality.yml@v1
