--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,14 +19,15 @@ jobs:
         with:
           release-type: ${{ inputs.release-type }}
           default-branch: main
-      - uses: actions/checkout@v2
+      # See https://github.com/google-github-actions/release-please-action#creating-majorminor-tags
+      - uses: actions/checkout@v3
         if: inputs.update-major-minor-tags
       - name: tag major and minor versions
         if: inputs.update-major-minor-tags && steps.release.outputs.release_created
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/google-github-actions/release-please-action.git"
+          git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
           git tag -d v${{ steps.release.outputs.major }} || true
           git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
           git push origin :v${{ steps.release.outputs.major }} || true
