feat(terraform-quality): add checkov baseline

--- a/.github/workflows/terraform-quality.yml
+++ b/.github/workflows/terraform-quality.yml
@@ -51,4 +51,5 @@ jobs:
           framework: terraform
           download_external_modules: true
           quiet: true
+          baseline: ${{ inputs.workdir }}/.checkov.baseline
       
