feat(terraform-quality): add the option to setup skip paths for checkov

--- a/.github/workflows/terraform-quality.yml
+++ b/.github/workflows/terraform-quality.yml
@@ -9,6 +9,9 @@ on:
         required: false
         type: boolean
         default: true
+      checkov_skip_path:
+        required: false
+        type: string
 
 name: terraform-quality
 jobs:
@@ -61,3 +64,5 @@ jobs:
           framework: terraform
           download_external_modules: true
           quiet: true
+          skip_path: ${{ inputs.checkov_skip_path }}
+
