--- a/.github/workflows/terraform-quality.yml
+++ b/.github/workflows/terraform-quality.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           wget https://raw.githubusercontent.com/warrensbox/terraform-switcher/release/install.sh
           chmod 755 install.sh
-          ./install.sh -b ./.bin 0.13.1288 # Last arg is the desired tfswitch version
+          ./install.sh -b ./.bin v1.1.1 # Last arg is the desired tfswitch version
           rm install.sh
           .bin/tfswitch -b .bin/terraform
           .bin/terraform -v
@@ -69,4 +69,3 @@ jobs:
           quiet: true
           skip_path: ${{ inputs.checkov_skip_path }}
           baseline: ${{ inputs.checkov_baseline }}
-
