--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>padok-team/renovate-config"]
+  "extends": [
+    "github>padok-team/renovate-config",
+    "semanticCommitTypeAll(fix)"
+  ]
 }
