chore(renovate): force use of semantic commits fix

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,6 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>padok-team/renovate-config",
-    "semanticCommitTypeAll(fix)"
+    ":semanticCommitTypeAll(fix)"
   ]
 }
